# flintlock

./: .dockerignore  .gitignore  CLAUDE.md  CNAME  CONTRIBUTING.md  DEMO_SETUP.md  Dockerfile  Dockerfile.demo  PLAN.md  README.md  TASK-auth.md  TASK-rbac-ui.md  TASK-sqlite.md  TASK-web-decomp.md  docker-compose.yml  gunicorn.conf.py  keygen.py  pyproject.toml  requirements.txt  vercel.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  demo-deploy.yml  ensure-demo-files.yml  sync-demo.yml
.wrangler/cache/: wrangler-account.json
api/: index.py
docs/: branch-strategy.md  checks.md  cli.md  deployment-hardening.md  deployment.md  deprecated-commercial-listing.md  finding-model.md  gumroad-listing.md  operations.md  performance.md  product-contract.md  secrets.md  security-model.md  vendor-enrichment-coverage.md
src/cashel/: _helpers.py  _vendor_helpers.py  activity_log.py  alert_engine.py  archive.py  audit_engine.py  (+31 more)
tests/: test_alert_engine.py  test_asa_objects.py  test_audit_pdf_warning.py  test_audit_workflow_smoke.py  test_auth.py  test_aws.py  test_azure.py  test_ci_smoke.py  test_cli_smoke.py  test_critical_severity.py  test_db.py  test_evidence_bundle.py  test_export.py  test_findings_model.py  test_fortinet_findings.py  test_ftd_findings.py  test_gcp.py  test_html_pdf.py  test_iptables.py  test_juniper.py  test_normalized_findings_qa.py  test_notify.py  test_pa_objects.xml  test_paloalto_findings.py  test_pfsense.py  test_remediation.py  test_reports.py  test_rule_quality.py  test_soc2_stig.py  test_vendor_enrichment_coverage.py  test_webhooks.py
(+43 files in other folders)
