[project]
name = "cashel"
version = "1.4.0"
description = "Firewall configuration auditing tool"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12,<1.0",
    "rich>=13.0,<15.0",
    "ciscoconfparse>=1.9,<2.0",
    "fpdf2>=2.7,<3.0",
    "flask>=3.0,<4.0",
    "flask-wtf>=1.2,<2.0",
    "flask-limiter>=3.5,<4.0",
    "cryptography>=41.0,<45.0",
    "paramiko>=3.0,<4.0",
    "apscheduler>=3.10,<4.0",
    "defusedxml>=0.7,<1.0",
    "gunicorn>=22.0,<24.0",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v"

[project.scripts]
cashel = "cashel.main:app"
cashel-web = "cashel.web:main"
